language/move-lang/tests/move_check/borrows/dereference_field_invalid.exp
error: 

    ┌── tests/move_check/borrows/dereference_field_invalid.move:12:9 ───
    │
 12 │         *s;
    │         ^^ Invalid dereference.
    ·
 11 │         let f = &mut s.f;
    │                 -------- Field 'f' is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/dereference_field_invalid.move:16:9 ───
    │
 16 │         *s;
    │         ^^ Invalid dereference.
    ·
 15 │         let f = id_mut(&mut s.f);
    │                 ---------------- Field 'f' is still being mutably borrowed by this reference
    │

